--- a/styles.css
+++ b/styles.css
@@ -474,6 +474,12 @@ nav a:hover::after {
   color: var(--text-secondary);
   margin-bottom: 0.25rem;
 }
+.weather-icon {
+    width: 30px;
+    height: 30px;
+    vertical-align: middle;
+    margin-right: 5px;
+}
 
 /* ================ */
 /* TOOLS SECTION */
